--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
-        "symfony/yaml": "5.2.*"
+        "symfony/yaml": "5.2.*",
+        "vich/uploader-bundle": "^1.16"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.14",
@@ -60,7 +61,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.2.*"
         }
     }
