--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,15 @@ services:
         restart: always
         env_file:
             -   ./env/postgresql.env
+    symfony_console:
+        build:
+            context: .
+            dockerfile: php/Dockerfile
+        volumes:
+            - ./symfony:/var/www/html
+        entrypoint: ["php", "/var/www/html/bin/console" ]
+    composer:
+        build: ./composer
+        volumes:
+            - ./symfony:/var/www/html
 # TODO : dockerize php utility container
