--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -16,6 +16,7 @@
         "vich/uploader-bundle": "^1.16"
     },
     "require-dev": {
+        "hautelook/alice-bundle": "^2.9",
         "symfony/maker-bundle": "^1.14",
         "symfony/profiler-pack": "^1.0"
     },
